Fix Stack spacing variations (#320)
* Add missing enum value

* Add no spacing variation

--- a/src/components/Stack/Stack.scss
+++ b/src/components/Stack/Stack.scss
@@ -26,6 +26,10 @@
   flex-direction: column;
 }
 
+.spacingNone {
+  @include stack-spacing(none);
+}
+
 .spacingTight {
   @include stack-spacing(tight);
 }
