--- a/src/styles/foundation/spacing.scss
+++ b/src/styles/foundation/spacing.scss
@@ -3,6 +3,7 @@
 $unit: 4px;
 
 $spacing-data: (
+  none: 0,
   extra-tight: rem($unit),
   tight: rem($unit * 2),
   base: rem($unit * 4),
